--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,34 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: delayed_notifier
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - ${PG_DATA_DIR:-./pg_data}:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7-alpine
+    container_name: delayed_redis
+    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    volumes:
+      - ${REDIS_DATA_DIR:-./redis_data}:/data
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: delayed_rabbitmq
+    ports:
+     - "5672:5672"
+     - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+    volumes:
+      - ${RABBITMQ_DATA_DIR:-./rabbitmq_data}:/data
+
 
