--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - ${REDIS_DATA_DIR:-./redis_data}:/data
 
   rabbitmq:
-    image: rabbitmq:3-management-alpine
+    image: heidiks/rabbitmq-delayed-message-exchange:latest
     container_name: delayed_rabbitmq
     ports:
      - "5672:5672"
